--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 	<title>Footer Animé</title>
 </head>
 <body>
-	
+	<footer>
+		<ul class="social-icon">
+			<li><a href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a></li>
+			<li><a href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a></li>
+			<li><a href="https://www.linkedin.com/"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+			<li><a href="https://www.instagram.com/"><ion-icon name="logo-instagram"></ion-icon></a></li>
+		</ul>
+		<ul class="menu">
+			<li><a href="#">Accueil</a></li>
+			<li><a href="#">A propos</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Equipe</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</footer>
 </body>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
