--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
 	<footer>
+		<div class="waves">
+			<div class="wave" id="wave1"></div>
+			<div class="wave" id="wave2"></div>
+			<div class="wave" id="wave3"></div>
+			<div class="wave" id="wave4"></div>
+		</div>
 		<ul class="social-icon">
 			<li><a href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a></li>
 			<li><a href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a></li>
